syntax = "proto3";

package prover.v1;

message Version {
    string v0_0_1 = 1;
}

// timestamps are represented in unix time in seconds

enum ResultCode {
    OK = 0;
    INVALID_PARAMETER = 1;
    INTERNAL_ERROR = 2;
    BUSY = 3;
    UNSPECIFIED = 4;
}

message Result {
    ResultCode code = 1;
    string message = 2;
}

service ProverService {
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
    rpc GetTaskResult(GetTaskResultRequest) returns (GetTaskResultResponse) {}
    rpc SplitElf(SplitElfRequest) returns (SplitElfResponse) {}
    rpc Prove(ProveRequest) returns (ProveResponse) {}
    rpc Aggregate(AggregateRequest) returns (AggregateResponse) {}
    rpc AggregateAll(AggregateAllRequest) returns (AggregateAllResponse) {}
    rpc FinalProof(FinalProofRequest) returns (FinalProofResponse) {}
}

message GetStatusRequest {}

message GetStatusResponse {
    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_BOOTING = 1;
        STATUS_COMPUTING = 2;
        STATUS_IDLE = 3;
        STATUS_HALT = 4;
    }
    Status status = 1;
    string prover_name = 2;
    string prover_id = 3;
    uint64 number_of_cores = 4;
    uint64 total_memory = 5;
    uint64 free_memory = 6;
}

message GetTaskResultRequest {
    string proof_id = 1;
    // uuid
    string computed_request_id = 2;
}

message GetTaskResultResponse {
    string proof_id = 1;
    string computed_request_id = 2;
    Result result = 3;
}

message SplitElfRequest {
    string proof_id = 1;
    string computed_request_id = 2;
    string base_dir = 3;
    string elf_path = 4;
    string seg_path = 5;
    uint64 block_no = 6;
    uint32 seg_size = 7;
    string args = 8;
    string public_input_path = 9;
    string private_input_path = 10;
    string output_path = 11;
}

message SplitElfResponse {
    string proof_id = 1;
    string computed_request_id = 2;
    Result result = 3;
    uint64 total_steps = 4;
}

message ProveRequest {
    string proof_id = 1;
    string computed_request_id = 2;

    string base_dir = 3;
    string seg_path = 4;
    uint64 block_no = 5;
    uint32 seg_size = 6;
    string proof_path = 7;
    string pub_value_path = 8;
}

message ProveResponse {
    string proof_id = 1;
    string computed_request_id = 2;
    Result result = 3;
}

message AggregateInput {
    string proof_path = 1;
    string pub_value_path = 2;
    bool is_agg = 3;
};

message AggregateRequest {
    string proof_id = 1;
    string computed_request_id = 2;
    string base_dir = 3;
    string seg_path = 4;
    uint64 block_no = 5;
    uint32 seg_size = 6;
    AggregateInput input1 = 7;
    AggregateInput input2 = 8;
    string agg_proof_path = 9;
    string agg_pub_value_path = 10;
    bool is_final = 11;
    string output_dir = 12;
}

message AggregateResponse {
    string proof_id = 1;
    string computed_request_id = 2;
    Result result = 3;
}

message AggregateAllRequest {
    string proof_id = 1;
    string computed_request_id = 2;
    string base_dir = 3;
    string seg_path = 4;
    uint64 block_no = 5;
    uint32 seg_size = 6;
    uint32 proof_num = 7;
    string proof_dir = 8;
    string pub_value_dir = 9;
    string output_dir = 10;
}

message AggregateAllResponse {
    string proof_id = 1;
    string computed_request_id = 2;
    Result result = 3;
}

message FinalProofRequest {
    string proof_id = 1;
    string computed_request_id = 2;
    bytes common_circuit_data = 3;
    bytes verifier_only_circuit_data = 4;
    bytes proof_with_public_inputs = 5;
    bytes block_public_inputs = 6;
}

message FinalProofResponse {
    string proof_id = 1;
    string computed_request_id = 2;
    Result result = 3;
}
